--- a/index.html
+++ b/index.html
@@ -3,6 +3,133 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Gunung Cupu — Tentang</title>
+  <meta name="description" content="Profil Gunung Cupu: konservasi berbasis penanaman jangka panjang, agroforestri, eduwisata, dan pemberdayaan masyarakat." />
+  <link rel="icon" href="logo.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+</head>
+
+<body>
+  <header class="topbar">
+    <div class="wrap navwrap">
+      <a class="brand" href="index.html">
+        <img class="brand-logo" src="logo.svg" alt="Gunung Cupu" />
+        <div class="brand-text">
+          <div class="brand-title">Gunung Cupu</div>
+          <div class="brand-sub">Conservation Farm &amp; Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav">
+        <a data-nav href="index.html">Beranda</a>
+        <a data-nav href="tentang.html">Tentang</a>
+        <a data-nav href="zona-z1.html">Zona Z1</a>
+        <a data-nav href="sekol
+!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Gunung Cupu — Beranda</title>
+  <meta name="description" content="Gunung Cupu — Conservation Farm & Nature Adventure. Konservasi, agroforestri, eduwisata, dan pendidikan alam." />
+  <link rel="icon" href="logo.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+</head>
+
+<body>
+  <header class="topbar">
+    <div class="wrap navwrap">
+      <a class="brand" href="index.html">
+        <img class="brand-logo" src="logo.svg" alt="Gunung Cupu" />
+        <div class="brand-text">
+          <div class="brand-title">Gunung Cupu</div>
+          <div class="brand-sub">Conservation Farm &amp; Nature Adventure</div>
+        </div>
+      </a>
+
+      <nav class="nav">
+        <a data-nav href="index.html">Beranda</a>
+        <a data-nav href="tentang.html">Tentang</a>
+        <a data-nav href="zona-z1.html">Zona Z1</a>
+        <a data-nav href="sekolah-alam.html">Sekolah Alam</a>
+        <a data-nav href="galeri.html">Galeri</a>
+        <a data-nav href="unduhan.html">Unduhan</a>
+        <a data-nav href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="hero">
+      <div class="hero-card">
+        <div class="pill">🌿 Gunung Cupu • Konservasi &amp; Eduwisata</div>
+        <h1>Menanam sepanjang musim, <br/>Merawat sepanjang waktu, <br/>Menjaga sepanjang masa</h1>
+        <p class="lead">
+          Lanskap konservasi berbasis penanaman jangka panjang di Sukajaya, Jonggol — Bogor.
+          Memadukan konservasi hutan &amp; air, agroforestri, edukasi lingkungan, dan ekonomi lokal.
+        </p>
+
+        <div class="cta">
+          <a class="btn primary" href="tentang.html">Mulai dari Tentang</a>
+          <a class="btn" href="galeri.html">Lihat Galeri</a>
+          <a class="btn ghost" href="unduhan.html">Unduh Dokumen</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Ringkas</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Konservasi berbasis penanaman</h3>
+          <p>Jati, mahoni, bambu, aren, kemiri, buah-buahan, dan tanaman obat membentuk ekosistem hutan rakyat.</p>
+        </article>
+        <article class="card">
+          <h3>Pemulihan hidrologi</h3>
+          <p>Rehabilitasi berkontribusi pada perlindungan tanah &amp; lereng, keanekaragaman hayati, dan keberlanjutan sumber air.</p>
+        </article>
+        <article class="card">
+          <h3>Agro–Eco–Edu Tourism</h3>
+          <p>Edukasi, kebun herbal, petualangan alam skala kecil, dan penguatan UMKM desa dengan etika lingkungan.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Jalur cepat</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Zona Konservasi Inti (Z1)</h3>
+          <p>Prinsip zonasi, perlindungan habitat, dan standar perilaku pengunjung.</p>
+          <a class="btn small" href="zona-z1.html">Baca Z1</a>
+        </article>
+        <article class="card">
+          <h3>Sekolah Alam</h3>
+          <p>Observasi → Aksi → Refleksi: belajar ekologi langsung dari lanskap.</p>
+          <a class="btn small" href="sekolah-alam.html">Lihat Program</a>
+        </article>
+        <article class="card">
+          <h3>Dokumen &amp; QR</h3>
+          <p>Kumpulan file untuk papan informasi, LKS, dan materi lapangan.</p>
+          <a class="btn small" href="unduhan.html">Ke Unduhan</a>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap">
+      <div>© Gunung Cupu — Conservation Farm &amp; Nature Adventure</div>
+    </div>
+  </footer>
+</body>
+</html>
+!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sekolah Alam — Gunung Cupu</title>
   <link rel="icon" href="logo.svg" />
   <link rel="stylesheet" href="style.css" />
